--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RefugeeHelpVB</string>
-    <string name="medical">Medical</string>
+    <string name="medical">Medical2123</string>
     <string name="transit">Transit</string>
     <string name="calendar">Calendar</string>
     <string name="action_settings">Settings</string>
