--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,51 @@
 <resources>
-    <string name="app_name">RefugeeHelpVB</string>
-    <string name="medical">Medical2123</string>
-    <string name="transit">Transit</string>
-    <string name="calendar">Calendar</string>
+    <string name="app_name">Hello!</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="emergency" translatable="false">Notfall</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string-array name="cities">
+        <item>@string/alsfeld</item>
+        <item>@string/lauterbach</item>
+        <item>@string/romrod</item>
+    </string-array>
+
+    <string-array name="places">
+        <item>@string/places_cat_food</item>
+        <item>@string/places_cat_clothes</item>
+        <item>@string/places_cat_pharmacies</item>
+        <item>@string/places_cat_education</item>
+        <item>@string/places_cat_sports</item>
+        <item>@string/places_cat_playgrounds</item>
+        <item>@string/places_cat_www</item>
+    </string-array>
+
+    <string name="hometown">Hometown</string>
+    <string name="alsfeld">Alsfeld</string>
+    <string name="lauterbach">Lauterbach</string>
+    <string name="ambulance">Ambulance</string>
+    <string name="fire_accident">Fire / Accident</string>
+    <string name="violence_crime">Violence / Crime</string>
+    <string name="btn_informationen">Useful Information</string>
+    <string name="title_activity_doctors">Doctors</string>
+    <string name="title_activity_doctors_details">DoctorsDetails</string>
+    <string name="title_activity_emergency">Emergency</string>
+    <string name="error_read_json">Error: Unable to read data</string>
+    <string name="title_activity_places">Places</string>
+    <string name="title_activity_public_transport">Public transport</string>
+    <string name="title_activity_calendar">Calendar</string>
+    <string name="romrod">Romrod</string>
+    <string name="title_activity_places_category">PlacesCategoryActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="doctor1">Dr. Jochen M\u00fcller</string>
-    <string name="doctor1_address">Alicestra\u00dfe 17</string>
-    <string name="doctor1_location">36304 Alsfeld</string>
-    <string name="doctor2">Dr. Rehm, Dr. Ruckelshausen</string>
-    <string name="doctor2_address">Lampertweg 11</string>
-    <string name="doctor2_location">36320 Kirtorf</string>
+    <string name="places_cat_food">Food</string>
+    <string name="places_cat_clothes">Clothes</string>
+    <string name="places_cat_pharmacies">Pharmacies</string>
+    <string name="places_cat_education">Education</string>
+    <string name="places_cat_sports">Sports</string>
+    <string name="places_cat_playgrounds">Playgrounds</string>
+    <string name="places_cat_www">Free Internet</string>
+    <string name="label_address">Address</string>
+    <string name="label_openhours">Opening hours</string>
+    <string name="label_spokenlangs">Spoken languages</string>
+
 </resources>
