Doktoren-Details fast fertiggestellt. Neue Doktoren-Attribute hinzugefügt. Karte zentriert nun je nach angegebenen Koordinaten im Doktoren-JSON
Mit der Implementierung einer Logik für Feiertage begonnen (Öffnungszeiten ändern usw.)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -24,4 +24,7 @@
     <string name="label_address">Adresse</string>
     <string name="label_openhours">Öffnungszeiten</string>
     <string name="label_spokenlangs">Gesprochene Sprachen</string>
+    <string name="closed">Geschlossen</string>
+    <string name="label_contact">Kontakt</string>
+    <string name="closed_holiday">Geschlossen (Feiertag)</string>
 </resources>
