--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,8 @@
     <string name="label_address">Address</string>
     <string name="label_openhours">Opening hours</string>
     <string name="label_spokenlangs">Spoken languages</string>
+    <string name="closed">Closed</string>
+    <string name="label_contact">Contact</string>
+    <string name="closed_holiday">Closed (holiday)</string>
 
 </resources>
