--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,14 +28,12 @@
     <string name="violence_crime">Violence / Crime</string>
     <string name="btn_informationen">Useful Information</string>
     <string name="title_activity_doctors">Doctors</string>
-    <string name="title_activity_doctors_details">DoctorsDetails</string>
     <string name="title_activity_emergency">Emergency</string>
     <string name="error_read_json">Error: Unable to read data</string>
     <string name="title_activity_places">Places</string>
     <string name="title_activity_public_transport">Public transport</string>
     <string name="title_activity_calendar">Calendar</string>
     <string name="romrod">Romrod</string>
-    <string name="title_activity_places_category">PlacesCategoryActivity</string>
     <string name="action_settings">Settings</string>
     <string name="places_cat_food">Food</string>
     <string name="places_cat_clothes">Clothes</string>
@@ -50,5 +48,7 @@
     <string name="closed">Closed</string>
     <string name="label_contact">Contact</string>
     <string name="closed_holiday">Closed (holiday)</string>
+    <string name="title_activity_places_details">PlacesDetailsActivity</string>
+    <string name="title_activity_startup">StartupActivity</string>
 
 </resources>
