--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,7 +6,7 @@
     <string name="rüddingshausen">Rüddingshausen</string>
     <string name="ambulance">Rettungsdienst</string>
     <string name="fire_accident">Feuer / Unfall</string>
-    <string name="violence_crime">Gewalt / Verbrechen</string>
+    <string name="violence_crime">Polizei</string>
     <string name="btn_informationen">Nützliche Informationen</string>
     <string name="title_activity_places">Orte</string>
     <string name="title_activity_emergency">Notfall</string>
