--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,16 @@
     <string name="title_activity_settings">Settings</string>
 
     <string-array name="cities">
+        <item>Allendorf Lumda</item>
+        <item>Allertshausen</item>
+        <item>Climbach</item>
         <item>@string/geilshausen</item>
+        <item>Kesselbach</item>
         <item>@string/londorf</item>
+        <item>Nordeck</item>
+        <item>Odenhausen</item>
         <item>@string/rüddingshausen</item>
-        <item>climbach</item>
-        <item>nordeck</item>
+        <item>Winnen</item>
     </string-array>
 
     <string-array name="places">
@@ -24,10 +29,10 @@
         <item>Friseure</item>
         <item>Gotteshäuser</item>
         <item>Post</item>
+        <item>Haltestellen</item>
         <item>Finanzen</item>
+        <item>Gesellschaftsräume</item>
         <item>Bürokratie</item>
-        <item>Bürokratie2</item>
-        <item>Bürokratie3</item>
     </string-array>
 
     <string name="hometown">Hometown</string>
