--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="emergency">Emergency</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="mapbox_token">pk.eyJ1IjoibWtheTg5IiwiYSI6ImNpdG92MDM0YjAwMWIyem55dmd0Mms0eGIifQ.ZIZ0Cq_lzvB6yMDjK-XOdQ</string>
+
     <string-array name="cities">
         <item>Allendorf Lumda</item>
         <item>Allertshausen</item>
