PDFs added in asserts Prepared ClickOn TextView in Public Transports Added new app_icon

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Hello: Rabenau!</string>
+    <string name="app_name">Hello: Rabenau-Allendorf</string>
 
     <string name="alsfeld">Alsfeld</string>
     <string name="lauterbach">Lauterbach</string>
