--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hello: Rabenau</string>
+    <string name="app_name">Hello: Rabenau-Allendorf</string>
     <string name="hello_world">Hello world!</string>
     <string name="emergency">Emergency</string>
     <string name="title_activity_settings">Settings</string>
