--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Hello: Rabenau</string>
+    <string name="app_name">Hello: Rabenau-Allendorf</string>
     <string name="londorf">Londorf</string>
     <string name="kesselbach">Kesselbach</string>
     <string name="rüddingshausen">Rüddingshausen</string>
